force-app/main/default/objects/Position__c/fields/Appropriation_Code__c.field-meta.xml
<CustomField>
    <fullName>Appropriation_Code__c</fullName>
    <defaultValue>&quot;AA1701506U5B1253001900501202D000A039869&quot;</defaultValue>
    <description>Appropriation code associated with a position; https://dw.opm.gov/datastandards/dataStandard/1400?index=A</description>
    <label>Appropriation Code</label>
    <length>155</length>
    <type>Text</type>
</CustomField>