force-app/main/default/objects/Position__c/fields/FLSA_Category__c.field-meta.xml
<CustomField>
    <fullName>FLSA_Category__c</fullName>
    <description>The status of a Federal civilian employee under the authority of Section 13 of the Fair Labor Standards Act (29 U.S.C. 213), as amended; https://dw.opm.gov/datastandards/dataStandard/1459?index=F</description>
    <inlineHelpText>The status of a Federal civilian employee under the authority of Section 13 of the Fair Labor Standards Act (29 U.S.C. 213), as amended; https://dw.opm.gov/datastandards/dataStandard/1459?index=F</inlineHelpText>
    <label>FLSA Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FLSA_Category</valueSetName>
    </valueSet>
</CustomField>