force-app/main/default/objects/Position__c/fields/Functional_Classification__c.field-meta.xml
<CustomField>
    <fullName>Functional_Classification__c</fullName>
    <description>An employee&apos;s primary work function as a scientist or engineer; https://dw.opm.gov/datastandards/dataStandard/1461?index=F</description>
    <inlineHelpText>An employee&apos;s primary work function as a scientist or engineer; https://dw.opm.gov/datastandards/dataStandard/1461?index=F</inlineHelpText>
    <label>Functional Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Classification</valueSetName>
    </valueSet>
</CustomField>