force-app/main/default/objects/Position__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Classification of the position; a major subdivision of the General Schedule, embracing a group
of associated or related occupations; https://dw.opm.gov/datastandards/dataStandard/1490?index=O</description>
    <inlineHelpText>Classification of the position; a major subdivision of the General Schedule, embracing a group
of associated or related occupations; https://dw.opm.gov/datastandards/dataStandard/1490?index=O</inlineHelpText>
    <label>Occupation</label>
    <referenceTo>Occupational_Series__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>