force-app/main/default/objects/Position__c/fields/Pay_Plan__c.field-meta.xml
<CustomField>
    <fullName>Pay_Plan__c</fullName>
    <description>A particular table or array of pay rates prescribed by law or other authoritative source that establishes the basic pay rates for certain employees; https://www.opm.gov/policy-data-oversight/pay-leave/pay-administration/fact-sheets/pay-plans/</description>
    <inlineHelpText>A particular table or array of pay rates prescribed by law or other authoritative source that establishes the basic pay rates for certain employees; https://www.opm.gov/policy-data-oversight/pay-leave/pay-administration/fact-sheets/pay-plans/</inlineHelpText>
    <label>Pay Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pay_Plan</valueSetName>
    </valueSet>
</CustomField>