force-app/main/default/objects/Position__c/fields/Position_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Position_Occupied__c</fullName>
    <description>An employee&apos;s position in the Competitive Service, Excepted Service, or the Senior Executive Service; https://dw.opm.gov/datastandards/dataStandard/1507?index=P</description>
    <inlineHelpText>An employee&apos;s position in the Competitive Service, Excepted Service, or the Senior Executive Service; https://dw.opm.gov/datastandards/dataStandard/1507?index=P</inlineHelpText>
    <label>Position Occupied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Position_Occupied</valueSetName>
    </valueSet>
</CustomField>