force-app/main/default/objects/Position__c/fields/Position_Organization__c.field-meta.xml
<CustomField>
    <fullName>Position_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lowest subdivision of an organization to which an employee is assigned as indicated on his/her position description.</description>
    <inlineHelpText>https://dw.opm.gov/datastandards/dataStandard/1508?index=P</inlineHelpText>
    <label>Position Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>