force-app/main/default/objects/Position__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>Official classification title description of the position of the employee.</description>
    <inlineHelpText>https://dw.opm.gov/datastandards/dataStandard/1510?index=P</inlineHelpText>
    <label>Position Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>