force-app/main/default/objects/Position__c/fields/Step_or_Rate__c.field-meta.xml
<CustomField>
    <fullName>Step_or_Rate__c</fullName>
    <description>An indicator of a specific salary within a grade, level, class, rate, or pay band.  Each grade has 10 step rates (steps 1-10) that are each worth approximately 3 percent of the employee’s salary; https://dw.opm.gov/datastandards/dataStandard/1576?index=S</description>
    <inlineHelpText>An indicator of a specific salary within a grade, level, class, rate, or pay band.  Each grade has 10 step rates (steps 1-10) that are each worth approximately 3 percent of the employee’s salary; https://dw.opm.gov/datastandards/dataStandard/1576?index=S</inlineHelpText>
    <label>Step or Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Step_or_Rate</valueSetName>
    </valueSet>
</CustomField>