force-app/main/default/objects/Position__c/fields/Supervisory_Status__c.field-meta.xml
<CustomField>
    <fullName>Supervisory_Status__c</fullName>
    <description>The nature of managerial, supervisory, or non-supervisory responsibility assigned to an employee&apos;s position; https://dw.opm.gov/datastandards/dataStandard/1578?index=S</description>
    <inlineHelpText>The nature of managerial, supervisory, or non-supervisory responsibility assigned to an employee&apos;s position; https://dw.opm.gov/datastandards/dataStandard/1578?index=S</inlineHelpText>
    <label>Supervisory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Supervisor or Manager</fullName>
            </value>
            <value>
                <fullName>Supervisor (CSRA)</fullName>
            </value>
            <value>
                <fullName>Management Official (CSRA)</fullName>
            </value>
            <value>
                <fullName>Leader</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>All Other Positions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>