force-app/main/default/objects/Position__c/fields/Telework_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Telework_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telework Eligible</label>
    <type>Checkbox</type>
</CustomField>