force-app/main/default/objects/Position__c/fields/Travel_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Travel_Percentage__c</fullName>
    <label>Travel Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>