force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position_Title__c</columns>
    <columns>Occupation__c</columns>
    <columns>Pay_Plan__c</columns>
    <columns>Grade_or_Level__c</columns>
    <columns>Step_or_Rate__c</columns>
    <columns>Position_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>